--- a/FaPA/GUI/Design/Templates/DatiDocumentiCorrelati.xaml
+++ b/FaPA/GUI/Design/Templates/DatiDocumentiCorrelati.xaml
@@ -81,8 +81,8 @@
 
         <t:InstanceNullManager  Grid.Row="0" Grid.Column="0" 
                                 BindedInstance="{Binding CurrentPoco}"
-                                EmptyMessage="Nessuna scheda fattura principale aggiunta"
-                                ActionCommandMessage="Aggiungi una scheda fattura principale aggiunta"
+                                EmptyMessage="Nessuna scheda dati correlati presente"
+                                ActionCommandMessage="Aggiungi una scheda dati correlati"
                                 OnNullCommand="{Binding AddItemCommand}" 
                                 ActionCommandParam="FatturaPrincipale"/>
 
