--- a/FaPA/GUI/Design/Templates/Ritenuta.xaml
+++ b/FaPA/GUI/Design/Templates/Ritenuta.xaml
@@ -12,8 +12,8 @@
 
         <t:InstanceNullManager  Grid.Row="0" Grid.Column="0" 
                                 BindedInstance="{Binding CurrentPoco}"
-                                EmptyMessage="Nessuna scheda fattura principale aggiunta"
-                                ActionCommandMessage="Aggiungi una scheda fattura principale aggiunta"
+                                EmptyMessage="Nessuna scheda ritenuta presente"
+                                ActionCommandMessage="Aggiungi una scheda ritenuta"
                                 OnNullCommand="{Binding AddItemCommand}" 
                                 ActionCommandParam="FatturaPrincipale"/>
 
