--- a/FaPA/GUI/Design/Templates/Fattura.xaml
+++ b/FaPA/GUI/Design/Templates/Fattura.xaml
@@ -150,7 +150,19 @@
             
             </GroupBox>
 
-
+            <!--<StackPanel Grid.Row="2" Grid.Column="4"  Margin="2,0,-2,0">
+                <TextBlock Text="Formato" />
+                --><!--TextSearch.TextPath="Description" DisplayMemberPath="Description"--><!--
+                <ComboBox Tag="EnterAsTab"
+						    HorizontalAlignment="Stretch" IsEditable="true"
+                            IsTextSearchEnabled="True"
+                            TextSearch.TextPath="Value"
+                            SelectedValuePath="Value"
+						    ItemsSource="{Binding Source={utils:Enumeration {x:Type enums:FormatoTrasmissioneType}}}"
+                            SelectedValue="{Binding CurrentEntity.FormatoTrasmissioneDB,  Mode=TwoWay, 
+                                                    UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}"
+                            DisplayMemberPath="Value" />
+            </StackPanel>-->
         
     </Grid>
     </Border>
