--- a/FaPA/GUI/Feautures/Fattura/View.xaml
+++ b/FaPA/GUI/Feautures/Fattura/View.xaml
@@ -3,7 +3,8 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:cc="clr-namespace:FaPA.GUI.Controls.MyTabControl"
         Title="Emissione fatture PA" SizeToContent="WidthAndHeight"
-        HorizontalAlignment="Stretch" VerticalAlignment ="Stretch" Height="500" >
+        Width="870" MaxWidth="870" MinWidth="870" MaxHeight="650"
+        HorizontalAlignment="Stretch" VerticalAlignment ="Stretch"  >
 
     <Grid>
         <Grid.ColumnDefinitions>
