--- a/FaPA/GUI/Design/Templates/Fattura.xaml
+++ b/FaPA/GUI/Design/Templates/Fattura.xaml
@@ -93,7 +93,7 @@
 
             <StackPanel Grid.Row="1" Grid.Column="3" Grid.ColumnSpan="2"  Margin="2,0,2,0">
                 <TextBlock Text="PEC committente" />
-                <TextBox   Text="{Binding CurrentEntity.PECDestinatario, Mode=TwoWay, ValidatesOnDataErrors=True, UpdateSourceTrigger=LostFocus, NotifyOnSourceUpdated=True, NotifyOnValidationError=True}" HorizontalAlignment="Stretch" />
+                <TextBox   Text="{Binding CurrentEntity.PecDestinatarioDB, Mode=TwoWay, ValidatesOnDataErrors=True, UpdateSourceTrigger=LostFocus, NotifyOnSourceUpdated=True, NotifyOnValidationError=True}" HorizontalAlignment="Stretch" />
             </StackPanel>
 
             <StackPanel Grid.Row="1" Grid.Column="5"  Margin="2,0,2,0">
@@ -144,13 +144,6 @@
                                                     UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" />
             </StackPanel>
 
-            <!--<StackPanel Grid.Row="2" Grid.Column="5" Margin="2,0,2,0">
-                <TextBlock Text="Id" />
-                <TextBox  Text="{Binding CurrentEntity.Id, Mode=OneWay, NotifyOnSourceUpdated=True, UpdateSourceTrigger=LostFocus, NotifyOnTargetUpdated=True}"
-                          HorizontalAlignment="Stretch" Margin="2,0,2,0"
-                          IsEnabled="False"/>
-            </StackPanel>-->
-
             <StackPanel Grid.Row="2" Grid.Column="4" Grid.ColumnSpan="2"  Margin="2,0,2,0">
                 <TextBlock Text="Riferimento Amm." />
                 <TextBox   Text="{Binding CurrentEntity.RiferimentoAmmDB, Mode=TwoWay, ValidatesOnDataErrors=True, UpdateSourceTrigger=LostFocus, NotifyOnSourceUpdated=True, NotifyOnValidationError=True}" 
@@ -163,22 +156,6 @@
                 <templates:DettagliFattura  />
 
             </GroupBox>
-
-            <!--<StackPanel Grid.Row="2" Grid.Column="4"  Margin="2,0,-2,0">
-                <TextBlock Text="Formato" />
-                -->
-            <!--TextSearch.TextPath="Description" DisplayMemberPath="Description"-->
-            <!--
-                <ComboBox Tag="EnterAsTab"
-						    HorizontalAlignment="Stretch" IsEditable="true"
-                            IsTextSearchEnabled="True"
-                            TextSearch.TextPath="Value"
-                            SelectedValuePath="Value"
-						    ItemsSource="{Binding Source={utils:Enumeration {x:Type enums:FormatoTrasmissioneType}}}"
-                            SelectedValue="{Binding CurrentEntity.FormatoTrasmissioneDB,  Mode=TwoWay, 
-                                                    UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}"
-                            DisplayMemberPath="Value" />
-            </StackPanel>-->
 
         </Grid>
     </Border>
